add styling with bulma css framework, fontawesome icon library [#175259869]

--- a/jekyll/_sass/main.scss
+++ b/jekyll/_sass/main.scss
@@ -1,2 +1,11 @@
 // _variables
 @import "./variables";
+
+// @fortawesome/fontawesome-free
+@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
+
+// bulma
+@import "../node_modules/bulma/bulma.sass";
