--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
     <title>apticity</title>
+
+    <link href="/assets/css/style.css" rel="stylesheet">
   </head>
 
   <body>
