add feed, seo directives to page layout [#175390513]

--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -1,21 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
     <title>apticity</title>
 
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet" />
+
+    {% feed_meta %} {% seo %}
   </head>
 
   <body>
     {% include header.html %}
 
-    <main>
-      {{ content }}
-    </main>
+    <main>{{ content }}</main>
 
     {% include footer.html %}
   </body>
