--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -9,7 +9,7 @@ layout: page
         <div class="navbar-menu">
           <div class="navbar-end">
             <a class="navbar-item is-active" href="{{ page.url }}">
-              <h1 class="title is-2">post</h1>
+              <span class="title is-2">post</span>
             </a>
           </div>
         </div>
@@ -24,8 +24,8 @@ layout: page
           <div class="tile box is-child">
             <article>
               <header>
-                <h2 class="title is-4">{{ page.title }}</h2>
-                <h3 class="subtitle has-text-weight-light is-6">{{ page.author }}</h3>
+                <h1 class="title is-4">{{ page.title }}</h1>
+                <h2 class="subtitle has-text-weight-light is-6">{{ page.author }}</h2>
               </header>
               <br />
 
